--- a/lib/hyacinth_web/live/pipeline_live/new.html.heex
+++ b/lib/hyacinth_web/live/pipeline_live/new.html.heex
@@ -15,21 +15,37 @@
         </div>
       </div>
 
-      <div class="mt-4">
-        <h1>Steps</h1>
+      <div class="mt-6 flex justify-between items-center">
+        <div class="flex items-center space-x-3">
+          <h1>Steps</h1>
+          <button type="button" class="btn btn-blue btn-icon" phx-click="add_transform">
+            <span class="opacity-90"><Icons.plus_circle_mini /></span>
+            <span>New Step</span>
+          </button>
+        </div>
       </div>
-      <div class="mt-2 space-y-4">
+      <div class="mt-3 space-y-4">
+        <%= if length(inputs_for(f, :transforms)) == 0 do %>
+          <div class="p-4 mb-8 rounded border border-gray-800">
+            <div class="text-lg text-gray-400 text-center">No steps yet.</div>
+          </div>
+        <% end %>
         <%= for {ft, i} <- Enum.with_index(inputs_for(f, :transforms)) do %>
           <div class="relative">
             <div class="absolute -left-20">
-              <div class="w-16 h-16 text-4xl text-black font-semibold bg-gray-200 rounded-full shadow flex justify-center items-center">
+              <div class="w-14 h-14 text-3xl text-black font-semibold bg-gray-200 rounded-full shadow flex justify-center items-center">
                 <%= i + 1%>
               </div>
             </div>
-            <div class="card mt-1">
-              <%= hidden_input ft, :order_index %>
+            <div class="card mt-1 relative">
+              <div class="absolute top-4 right-4">
+                <button type="button" class="text-gray-500 hover:text-red-500 transition" phx-click="delete_transform" phx-value-index={i}>
+                  <Icons.trash_solid />
+                </button>
+              </div>
+              <%= hidden_input ft, :order_index, value: i %>
               <div class="form-content">
-                <%= if Ecto.Changeset.get_field(ft.source, :order_index) == 0 do %>
+                <%= if i == 0 do %>
                   <p>
                     <%= label ft, :input_id, "Input Dataset" %>
                     <%= select ft, :input_id, Enum.map(@datasets, fn d -> {d.name, d.id} end), prompt: "Choose a value" %>
@@ -43,10 +59,10 @@
                   <%= error_tag ft, :driver %>
                 </p>
               </div>
-              <div class="mt-6">
-                <div class="flex items-center space-x-2">
-                  <div class="text-xl text-gray-300">Driver Options</div>
-                  <button type="button" class="btn btn-icon-only btn-sm btn-blue" phx-click="edit_transform_options" phx-value-index={i}>
+              <div class="mt-5 pt-3 border-t-2 border-gray-600">
+                <div class="flex items-center space-x-1">
+                  <div class="text-lg text-gray-300">Driver Options</div>
+                  <button type="button" class="text-blue-300 hover:text-blue-400" phx-click="edit_transform_options" phx-value-index={i}>
                     <Icons.pencil_square_mini />
                   </button>
                 </div>
@@ -64,15 +80,9 @@
         <% end %>
       </div>
 
-      <div class="mt-4 flex justify-between items-center space-x-2">
-        <div class="flex items-center space-x-2">
-          <button type="button" class="btn btn-blue" phx-click="add_transform">Add Transform</button>
-          <button type="button" class="btn btn-blue" phx-click="remove_last_transform">Remove Transform</button>
-        </div>
-        <%= submit class: "btn btn-icon btn-blue" do %>
-          <span class="opacity-80">
-            <Icons.bookmark_mini />
-          </span>
+      <div class="mt-8 flex justify-center">
+        <%= submit class: "btn btn-xl btn-icon btn-blue" do %>
+          <span class="opacity-80"><Icons.bookmark_solid /></span>
           <span>Save Pipeline</span>
         <% end %>
       </div>
