--- a/lib/hyacinth_web/live/label_job_live/show.html.heex
+++ b/lib/hyacinth_web/live/label_job_live/show.html.heex
@@ -11,7 +11,7 @@
     </:crumb>
   </.breadcrumbs>
 
-  <div class="mt-2 flex justify-between items-center">
+  <div class="mt-2 flex justify-between items-start">
     <div class="flex items-center space-x-3">
       <h1 class="text-3xl"><%= @job.name %></h1>
       <%= case @job.label_type do %>
