Move nav to template inside live layout so that it can be hidden on some pages without breaking after live navigation

--- a/lib/hyacinth_web/live/label_session_live/label.html.heex
+++ b/lib/hyacinth_web/live/label_session_live/label.html.heex
@@ -1,4 +1,4 @@
-<header class="mt-4 px-4 py-1 w-full bg-gray-800 flex justify-between items-center">
+<header class="px-4 py-2 w-full bg-gray-800 flex justify-between items-center">
   <div>
     <%= live_redirect "Back to session", to: Routes.live_path(@socket, HyacinthWeb.LabelSessionLive.Show, @label_session), class: "link" %>
   </div>
