--- a/lib/hyacinth_web/templates/layout/app.html.heex
+++ b/lib/hyacinth_web/templates/layout/app.html.heex
@@ -1,3 +1,5 @@
+<%= render "_primary_nav.html", assigns %>
+
 <div class="mt-6 pb-32 mx-auto max-w-screen-lg">
   <p class="alert alert-info" role="alert"><%= get_flash(@conn, :info) %></p>
   <p class="alert alert-danger" role="alert"><%= get_flash(@conn, :error) %></p>
