--- a/lib/hyacinth_web/templates/layout/live.html.heex
+++ b/lib/hyacinth_web/templates/layout/live.html.heex
@@ -1,4 +1,8 @@
-<div class={!assigns[:use_wide_layout] && "mt-6 pb-32 mx-auto max-w-screen-lg"}>
+<%= unless assigns[:disable_primary_nav] do %>
+  <%= render "_primary_nav.html", assigns %>
+<% end %>
+
+<div class={unless assigns[:use_wide_layout], do: "mt-6 pb-32 mx-auto max-w-screen-lg"}>
   <p class="alert alert-info" role="alert"
     phx-click="lv:clear-flash"
     phx-value-key="info"><%= live_flash(@flash, :info) %></p>
