--- a/lib/hyacinth_web/templates/layout/root.html.heex
+++ b/lib/hyacinth_web/templates/layout/root.html.heex
@@ -9,7 +9,7 @@
     <link phx-track-static rel="stylesheet" href={Routes.static_path(@conn, "/assets/app.css")}/>
     <script defer phx-track-static type="text/javascript" src={Routes.static_path(@conn, "/assets/app.js")}></script>
   </head>
-  <body class="text-white bg-gray-900">
+  <body>
     <%= @inner_content %>
   </body>
 </html>
