--- a/lib/hyacinth_web/live/dataset_live/show.html.heex
+++ b/lib/hyacinth_web/live/dataset_live/show.html.heex
@@ -8,16 +8,23 @@
     </:crumb>
   </.breadcrumbs>
 
-  <div class="mt-2 flex items-center space-x-3">
-    <h1 class="text-3xl"><%= @dataset.name %></h1>
-    <div>
-      <%= case @dataset.type do %>
-      <% :root -> %>
-        <div class="inline-block px-3 py-1 text-sm font-medium text-violet-400 bg-violet-400 bg-opacity-20 rounded-full">Root Dataset</div>
-      <% :derived -> %>
-        <div class="inline-block px-3 py-1 text-sm font-medium text-orange-400 bg-orange-400 bg-opacity-20 rounded-full">Derived Dataset</div>
-      <% end %>
+  <div class="flex justify-between items-start">
+    <div class="mt-2 flex items-center space-x-3">
+      <h1 class="text-3xl"><%= @dataset.name %></h1>
+      <div>
+        <%= case @dataset.type do %>
+        <% :root -> %>
+          <div class="inline-block px-3 py-1 text-sm font-medium text-violet-400 bg-violet-400 bg-opacity-20 rounded-full">Root Dataset</div>
+        <% :derived -> %>
+          <div class="inline-block px-3 py-1 text-sm font-medium text-orange-400 bg-orange-400 bg-opacity-20 rounded-full">Derived Dataset</div>
+        <% end %>
+      </div>
     </div>
+
+    <%= link to: Routes.live_path(@socket, HyacinthWeb.LabelJobLive.New, dataset: @dataset), class: "btn btn-blue btn-icon" do %>
+      <Icons.plus_small_solid />
+      <span>New Job</span>
+    <% end %>
   </div>
 
   <div class="mt-4 text-xl border-b-2 border-gray-700">
