--- a/lib/hyacinth_web/live/label_session_live/label.html.heex
+++ b/lib/hyacinth_web/live/label_session_live/label.html.heex
@@ -25,10 +25,12 @@
     <div class="flex space-x-6">
       <%= for object <- @element.objects do %>
         <div>
-          <div class="aspect-square flex justify-center items-center" style="height: calc(100vh - 16rem);">
-            <img class="w-full rounded" src={Routes.image_path(@socket, :show, object.id)} />
-          </div>
-          <div class="mt-2 p-2 text-lg text-gray-300 font-medium text-center bg-gray-800 rounded border border-gray-700">
+          <img
+            class="w-full aspect-square object-contain bg-black rounded"
+            src={Routes.image_path(@socket, :show, object.id)}
+            style="height: calc(100vh - 16rem);"
+          />
+          <div class="mt-6 p-2 text-lg text-gray-300 font-medium text-center bg-gray-800 rounded border border-gray-700">
             <span><%= object.name %></span>
           </div>
         </div>
