Add keyboard commands to label interface

--- a/lib/hyacinth_web/live/label_session_live/label.html.heex
+++ b/lib/hyacinth_web/live/label_session_live/label.html.heex
@@ -1,3 +1,7 @@
+<div phx-window-keydown="prev_element" phx-key="ArrowLeft" />
+<div phx-window-keydown="next_element" phx-key="ArrowRight" />
+<div phx-window-keydown="set_label_key" />
+
 <header class="px-4 py-2 w-full bg-gray-800 flex justify-between items-center">
   <div>
     <%= live_redirect "Back to session", to: Routes.live_path(@socket, HyacinthWeb.LabelSessionLive.Show, @label_session), class: "link" %>
