--- a/lib/hyacinth_web/live/pipeline_live/show.html.heex
+++ b/lib/hyacinth_web/live/pipeline_live/show.html.heex
@@ -35,7 +35,7 @@
         <div class="mt-4">
           <h3 class="text-base text-gray-400">Driver Options</h3>
           <ul>
-            <%= for {key, value} <- transform.arguments do %>
+            <%= for {key, value} <- transform.options do %>
               <li>
                 <span class="text-gray-400"><%= key %>:</span>
                 <span><%= value %></span>
