--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -113,6 +113,10 @@ h3 {
     @apply text-blue-400 bg-blue-400 bg-opacity-20;
 }
 
+.pill-yellow {
+    @apply text-yellow-300 bg-yellow-300 bg-opacity-20;
+}
+
 
 /* Table */
 .table tr {
